--- a/app/src/main/res/layout/login_student.xml
+++ b/app/src/main/res/layout/login_student.xml
@@ -6,13 +6,8 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="30dp">
-        <TextView
-            android:id="@+id/back"
-            android:layout_width="80dp"
-            android:layout_height="40dp"
-            android:drawableStart="@mipmap/back"
-            android:drawableLeft="@mipmap/back"
-            android:textColor="#ffc0cb"/>
+        <include
+            layout="@layout/head"/>
     </LinearLayout>
 
     <LinearLayout
