跳转和返回

--- a/app/src/main/res/layout/teacher_info.xml
+++ b/app/src/main/res/layout/teacher_info.xml
@@ -1,21 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <!--"教师信息"栏-->
-    <LinearLayout
+
+
+    <include
+        android:id="@+id/ly_head"
+        layout="@layout/head"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:orientation="horizontal"
-        android:background="#8FC5CF">
-        <include
-            layout="@layout/teacher_info_colume"/>
-    </LinearLayout>
+        android:layout_height="40dp"
+        />
 
     <!--个人基本信息-->
-    <LinearLayout
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+        <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -147,5 +155,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:src="@mipmap/manimg"/>
-
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
