--- a/app/src/main/res/layout/login_student.xml
+++ b/app/src/main/res/layout/login_student.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:layout_marginTop="10dp"
         >
         <ImageView
             android:layout_width="70dp"
