--- a/app/src/main/res/layout/about_app.xml
+++ b/app/src/main/res/layout/about_app.xml
@@ -54,6 +54,11 @@
             android:textSize="35sp"
             android:layout_gravity="center"/>
     </LinearLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="20dp"
+        android:background="@color/BLACK"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -75,6 +80,10 @@
                 android:textSize="20sp"/>
         </RelativeLayout>
     </LinearLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/BLACK"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -96,6 +105,10 @@
                 android:textSize="20sp"/>
         </RelativeLayout>
     </LinearLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/BLACK"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -117,6 +130,10 @@
                 android:textSize="20sp"/>
         </RelativeLayout>
     </LinearLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/BLACK"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -128,6 +145,10 @@
             android:text="@string/service_item"
             android:textSize="20sp"/>
     </LinearLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/BLACK"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -139,4 +160,8 @@
             android:text="@string/score"
             android:textSize="20sp"/>
     </LinearLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/BLACK"/>
 </LinearLayout>
