--- a/app/src/main/res/layout/system_notice.xml
+++ b/app/src/main/res/layout/system_notice.xml
@@ -3,45 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <LinearLayout
-        android:id="@+id/system_notice_1"
+    <include
+        android:id="@+id/ly_head"
+        layout="@layout/head"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:orientation="horizontal"
-        android:background="#8FC5CF">
-        <ImageView
-            android:id="@+id/share_back"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:onClick="back"
-            android:src="@mipmap/nav_icon_back_3"/>
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="5"
-            android:orientation="vertical">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:background="@android:color/transparent"
-                android:text="@string/system_notice"
-                android:textSize="30dp"
-                android:textColor="#FFFFFF"
-                android:layout_gravity="center_horizontal"
-                android:gravity="center"/>
-        </LinearLayout>
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@android:color/transparent"/>
-    </LinearLayout>
+        android:layout_height="40dp"
+        />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/reply"
-        android:layout_below="@id/system_notice_1"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
