学生端界面已竣工

--- a/app/src/main/res/layout/area.xml
+++ b/app/src/main/res/layout/area.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:orientation="vertical">
@@ -15,11 +15,11 @@
             android:text="@string/area"/>
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="15dp"
-            android:background="@android:color/transparent"
-            android:layout_below="@id/iv_sex_img"/>
+            android:layout_height="1dp"
+            android:layout_margin="10dp"
+            android:background="#E5E5E5"/>
         <RelativeLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <ImageView
                 android:id="@+id/location_icon"
