--- a/app/src/main/res/layout/update_key.xml
+++ b/app/src/main/res/layout/update_key.xml
@@ -39,9 +39,10 @@
         <Button
             android:id="@+id/confirm"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:layout_weight="1"
             android:text="@string/confirm"
+            android:textSize="20sp"
             android:background="#FFFACD"/>
         <TextView
             android:layout_width="0dp"
