--- a/app/src/main/res/layout/evaluation.xml
+++ b/app/src/main/res/layout/evaluation.xml
@@ -12,9 +12,9 @@
         android:text="@string/evaluation"/>
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="15dp"
-        android:background="@android:color/transparent"
-        android:layout_below="@id/iv_sex_img"/>
+        android:layout_height="1dp"
+        android:layout_margin="10dp"
+        android:background="#E5E5E5"/>
     <TextView
         android:id="@+id/evaluation"
         android:layout_width="wrap_content"
