--- a/app/src/main/res/layout/my_message.xml
+++ b/app/src/main/res/layout/my_message.xml
@@ -19,4 +19,9 @@
         <include
             layout="@layout/system_notice_colume"/>
     </LinearLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="10dp"
+        android:background="@android:color/black"/>
 </LinearLayout>
