--- a/app/src/main/res/layout/select.xml
+++ b/app/src/main/res/layout/select.xml
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:layout_gravity="center_horizontal"
-            android:background="#ffffff"
+            android:background="@mipmap/class_info_en"
             android:elevation="2dp"
             android:text="@string/student"
             android:textSize="18sp" />
@@ -67,7 +67,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:layout_gravity="center_horizontal"
-            android:background="#ffffff"
+            android:background="@mipmap/class_info_math"
             android:text="@string/teacher"
             android:textSize="18sp" />
         <LinearLayout
