--- a/app/src/main/res/layout/login_student.xml
+++ b/app/src/main/res/layout/login_student.xml
@@ -2,109 +2,69 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="30dp">
-        <include
-            layout="@layout/head"/>
-    </LinearLayout>
+    android:orientation="vertical"
+    android:background="@mipmap/login_background">
 
+    <!--学士说-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_marginTop="10dp"
         >
-        <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:src="@mipmap/logo"
-            android:layout_gravity="center"/>
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/app_name"
-            android:textSize="35sp"
-            android:layout_gravity="center"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="30dp"
-            android:text="@string/phone_number"/>
-        <EditText
-            android:id="@+id/input_phone_number"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:hint="@string/input_phone_number"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:text="@string/key"/>
-        <EditText
-            android:id="@+id/input_key"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:hint="@string/input_key"/>
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp">
-        <Button
-            android:id="@+id/login_student"
             android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_weight="3"
-            android:background="#ffffff"
-            android:text="@string/login_student"
-            android:textSize="20sp"/>
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
         <TextView
+            android:id="@+id/xue"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@android:color/transparent"
-            />
-        <Button
-            android:id="@+id/register"
+            android:text="@string/xue"
+            android:textSize="60sp"
+            android:textColor="#00C5CD"/>
+        <TextView
+            android:id="@+id/shi"
             android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_weight="3"
-            android:background="@android:color/transparent"
-            android:text="@string/register"
-            android:textSize="20sp"/>
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/shi"
+            android:textSize="60sp"
+            android:textColor="@android:color/white"/>
+        <TextView
+            android:id="@+id/shuo"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/shuo"
+            android:textSize="60sp"
+            android:textColor="@android:color/white"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
     </LinearLayout>
+    <!--登录-->
+    <include
+        layout="@layout/login_part"/>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <Button
-            android:id="@+id/forget_key"
-            android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="20dp"
-            android:background="#ffffff"
-            android:text="@string/forget_key"/>
+        android:layout_height="match_parent">
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:src="@mipmap/login"/>
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
     </LinearLayout>
+
 
 </LinearLayout>
