--- a/app/src/main/res/layout/system_notice.xml
+++ b/app/src/main/res/layout/system_notice.xml
@@ -66,7 +66,7 @@
         <Button
             android:id="@+id/send"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:layout_weight="1"
             android:text="@string/send"
             android:background="#FFFACD"/>
