--- a/app/src/main/res/layout/area.xml
+++ b/app/src/main/res/layout/area.xml
@@ -26,7 +26,7 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_marginLeft="20dp"
-                android:src="@mipmap/bottom_iantou"/>
+                android:src="@mipmap/local"/>
             <TextView
                 android:id="@+id/location"
                 android:layout_width="wrap_content"
