--- a/app/src/main/res/layout/question_feedback.xml
+++ b/app/src/main/res/layout/question_feedback.xml
@@ -28,19 +28,15 @@
             android:layout_height="150dp"
             android:layout_marginTop="5dp"
             android:gravity="top|left"
+            android:background="@drawable/corners_bg"
             android:hint="@string/most_hint" />
-        <!--分界线-->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="10dp"
-            android:background="#DEDEDE"
-            android:layout_marginTop="10dp"/>
         <EditText
             android:id="@+id/QQ_hint"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_marginTop="10dp"
             android:gravity="top|left"
+            android:background="@drawable/corners_bg"
             android:hint="@string/QQ_hint"/>
     </LinearLayout>
     <LinearLayout
