--- a/app/src/main/res/layout/system_notice.xml
+++ b/app/src/main/res/layout/system_notice.xml
@@ -17,6 +17,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:orientation="vertical">
             <TextView
                 android:id="@+id/system_notice_time_specific_1"
@@ -28,13 +29,15 @@
                 android:id="@+id/system_notice_content"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:background="@mipmap/system_notice_content"
+                android:background="@drawable/corners_bg"
+                android:layout_marginTop="10dp"
                 android:text="@string/system_notice_content"
                 android:gravity="center"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:orientation="vertical">
             <TextView
                 android:id="@+id/system_notice_time_specific_2"
@@ -46,7 +49,8 @@
                 android:id="@+id/system_notice_reply"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:background="@mipmap/system_notice_content"
+                android:background="@drawable/corners_bg"
+                android:layout_marginTop="10dp"
                 android:text="@string/system_notice_reply"
                 android:gravity="center"/>
         </LinearLayout>
@@ -60,8 +64,11 @@
         <EditText
             android:id="@+id/reply_hint"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:layout_weight="5"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:background="@color/white"
             android:hint="@string/reply_hint"/>
         <Button
             android:id="@+id/send"
