--- a/app/src/main/res/layout/teacher_person_info.xml
+++ b/app/src/main/res/layout/teacher_person_info.xml
@@ -5,8 +5,7 @@
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
+        android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/image"
             android:layout_width="wrap_content"
