--- a/app/src/main/res/layout/about_app.xml
+++ b/app/src/main/res/layout/about_app.xml
@@ -20,6 +20,7 @@
         <ImageView
             android:layout_width="120dp"
             android:layout_height="120dp"
+            android:layout_marginTop="10dp"
             android:src="@mipmap/logo"
             android:layout_gravity="center"/>
         <TextView
