--- a/app/src/main/res/layout/find_the_key.xml
+++ b/app/src/main/res/layout/find_the_key.xml
@@ -6,12 +6,12 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="40dp"
         android:background="#8FC5CF">
         <ImageView
             android:id="@+id/find_key_back"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="back"
             android:src="@mipmap/nav_icon_back_3"/>
@@ -25,7 +25,7 @@
                 android:layout_height="match_parent"
                 android:background="@android:color/transparent"
                 android:text="@string/find_the_key"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:textColor="#FFFFFF"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center"/>
@@ -39,99 +39,108 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="5dp"
         android:text="@string/identity_authentication"
         android:textSize="20sp"/>
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="20dp"
-        android:background="@color/BLACK"/>
-    <EditText
-        android:id="@+id/input_phone_number_hint"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:background="@android:color/transparent"
-        android:hint="@string/input_phone_number_hint"
-        android:textSize="20sp"/>
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="20dp"
-        android:background="@color/BLACK"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:background="@color/white">
+        <EditText
+            android:id="@+id/input_phone_number_hint"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:background="@android:color/transparent"
+            android:hint="@string/input_phone_number_hint"
+            android:textSize="15sp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:background="@color/white"
         android:orientation="horizontal">
         <EditText
             android:id="@+id/input_verification_code_hint"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:layout_marginTop="15dp"
+            android:layout_weight="2"
+            android:layout_margin="15dp"
             android:background="@android:color/transparent"
             android:hint="@string/input_verification_code_hint"
-            android:textSize="20sp"/>
+            android:textSize="15sp"/>
         <Button
             android:id="@+id/get_verification_code"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:layout_weight="1"
-            android:layout_marginTop="10dp"
+            android:layout_gravity="center"
             android:background="#FFFACD"
             android:text="@string/get_verification_code"/>
     </LinearLayout>
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="15dp"
-        android:background="@color/BLACK"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="5dp"
         android:background="@android:color/transparent"
         android:text="@string/set_new_key"
         android:textSize="20sp"/>
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="20dp"
-        android:background="@color/BLACK"/>
-    <EditText
-        android:id="@+id/input_the_new_key_hint"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:background="@android:color/transparent"
-        android:hint="@string/input_the_new_key_hint"
-        android:textSize="20sp"/>
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="20dp"
-        android:background="@color/BLACK"/>
-    <EditText
-        android:id="@+id/input_the_new_key_again_hint"
+        android:layout_marginTop="5dp"
+        android:background="@color/white">
+        <EditText
+            android:id="@+id/input_the_new_key_hint"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:background="@android:color/transparent"
+            android:password="true"
+            android:hint="@string/input_the_new_key_hint"
+            android:textSize="15sp"/>
+    </LinearLayout>
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:background="@android:color/transparent"
-        android:hint="@string/input_the_new_key_again_hint"
-        android:textSize="20sp"/>
-    <ImageView
+        android:layout_marginTop="5dp"
+        android:background="@color/white">
+        <EditText
+            android:id="@+id/input_the_new_key_again_hint"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:background="@android:color/transparent"
+            android:password="true"
+            android:hint="@string/input_the_new_key_again_hint"
+            android:textSize="15sp"/>
+    </LinearLayout>
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="20dp"
-        android:background="@color/BLACK"/>
-    <Button
-        android:id="@+id/confirm_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_gravity="center"
-        android:text="@string/confirm"
-        android:background="#FFFACD"/>
+        android:layout_height="30dp"
+        android:layout_marginTop="30dp">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+        <Button
+            android:id="@+id/confirm_1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/confirm"
+            android:background="#FFFACD"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+    </LinearLayout>
 
 </LinearLayout>
