--- a/app/src/main/res/layout/teache_time.xml
+++ b/app/src/main/res/layout/teache_time.xml
@@ -69,10 +69,7 @@
         android:layout_alignTop="@id/morning"
         android:layout_alignLeft="@id/monday"
         android:layout_alignRight="@id/monday"
-        android:layout_alignBottom="@id/morning"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:background="@drawable/time_checked"/>
+        android:layout_alignBottom="@id/morning"/>
     <CheckBox
         android:id="@+id/tuesday_morning"
         android:layout_width="wrap_content"
@@ -80,10 +77,7 @@
         android:layout_alignTop="@id/morning"
         android:layout_alignLeft="@id/tuesday"
         android:layout_alignRight="@id/tuesday"
-        android:layout_alignBottom="@id/morning"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:background="@drawable/time_checked"/>
+        android:layout_alignBottom="@id/morning"/>
     <CheckBox
         android:id="@+id/wednesday_morning"
         android:layout_width="wrap_content"
@@ -91,10 +85,7 @@
         android:layout_alignTop="@id/morning"
         android:layout_alignLeft="@id/wednesday"
         android:layout_alignRight="@id/wednesday"
-        android:layout_alignBottom="@id/morning"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:background="@drawable/time_checked"/>
+        android:layout_alignBottom="@id/morning"/>
     <CheckBox
         android:id="@+id/thursday_morning"
         android:layout_width="wrap_content"
@@ -102,10 +93,7 @@
         android:layout_alignTop="@id/morning"
         android:layout_alignLeft="@id/thursday"
         android:layout_alignRight="@id/thursday"
-        android:layout_alignBottom="@id/morning"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:background="@drawable/time_checked"/>
+        android:layout_alignBottom="@id/morning"/>
     <CheckBox
         android:id="@+id/friday_morning"
         android:layout_width="wrap_content"
@@ -113,10 +101,7 @@
         android:layout_alignTop="@id/morning"
         android:layout_alignLeft="@id/friday"
         android:layout_alignRight="@id/friday"
-        android:layout_alignBottom="@id/morning"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:background="@drawable/time_checked"/>
+        android:layout_alignBottom="@id/morning"/>
     <CheckBox
         android:id="@+id/saturday_morning"
         android:layout_width="wrap_content"
@@ -124,10 +109,7 @@
         android:layout_alignTop="@id/morning"
         android:layout_alignLeft="@id/saturday"
         android:layout_alignRight="@id/saturday"
-        android:layout_alignBottom="@id/morning"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:background="@drawable/time_checked"/>
+        android:layout_alignBottom="@id/morning"/>
     <CheckBox
         android:id="@+id/sunday_morning"
         android:layout_width="wrap_content"
@@ -135,10 +117,7 @@
         android:layout_alignTop="@id/morning"
         android:layout_alignLeft="@id/sunday"
         android:layout_alignRight="@id/sunday"
-        android:layout_alignBottom="@id/morning"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:background="@drawable/time_checked"/>
+        android:layout_alignBottom="@id/morning"/>
     <!--下午行-->
     <TextView
         android:id="@+id/afternoon"
@@ -155,10 +134,7 @@
         android:layout_alignTop="@id/afternoon"
         android:layout_alignLeft="@id/monday"
         android:layout_alignRight="@id/monday"
-        android:layout_alignBottom="@id/afternoon"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:background="@drawable/time_checked"/>
+        android:layout_alignBottom="@id/afternoon"/>
     <CheckBox
         android:id="@+id/tuesday_afternoon"
         android:layout_width="wrap_content"
@@ -166,10 +142,7 @@
         android:layout_alignTop="@id/afternoon"
         android:layout_alignLeft="@id/tuesday"
         android:layout_alignRight="@id/tuesday"
-        android:layout_alignBottom="@id/afternoon"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:background="@drawable/time_checked"/>
+        android:layout_alignBottom="@id/afternoon"/>
     <CheckBox
         android:id="@+id/wednesday_afternoon"
         android:layout_width="wrap_content"
@@ -177,10 +150,7 @@
         android:layout_alignTop="@id/afternoon"
         android:layout_alignLeft="@id/wednesday"
         android:layout_alignRight="@id/wednesday"
-        android:layout_alignBottom="@id/afternoon"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:background="@drawable/time_checked"/>
+        android:layout_alignBottom="@id/afternoon"/>
     <CheckBox
         android:id="@+id/thursday_afternoon"
         android:layout_width="wrap_content"
@@ -188,10 +158,7 @@
         android:layout_alignTop="@id/afternoon"
         android:layout_alignLeft="@id/thursday"
         android:layout_alignRight="@id/thursday"
-        android:layout_alignBottom="@id/afternoon"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:background="@drawable/time_checked"/>
+        android:layout_alignBottom="@id/afternoon"/>
     <CheckBox
         android:id="@+id/friday_afternoon"
         android:layout_width="wrap_content"
@@ -199,10 +166,7 @@
         android:layout_alignTop="@id/afternoon"
         android:layout_alignLeft="@id/friday"
         android:layout_alignRight="@id/friday"
-        android:layout_alignBottom="@id/afternoon"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:background="@drawable/time_checked"/>
+        android:layout_alignBottom="@id/afternoon"/>
     <CheckBox
         android:id="@+id/saturday_afternoon"
         android:layout_width="wrap_content"
@@ -210,10 +174,7 @@
         android:layout_alignTop="@id/afternoon"
         android:layout_alignLeft="@id/saturday"
         android:layout_alignRight="@id/saturday"
-        android:layout_alignBottom="@id/afternoon"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:background="@drawable/time_checked"/>
+        android:layout_alignBottom="@id/afternoon"/>
     <CheckBox
         android:id="@+id/sunday_afternoon"
         android:layout_width="wrap_content"
@@ -221,10 +182,7 @@
         android:layout_alignTop="@id/afternoon"
         android:layout_alignLeft="@id/sunday"
         android:layout_alignRight="@id/sunday"
-        android:layout_alignBottom="@id/afternoon"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:background="@drawable/time_checked"/>
+        android:layout_alignBottom="@id/afternoon"/>
     <!--晚上行-->
     <TextView
         android:id="@+id/evening"
@@ -241,10 +199,7 @@
         android:layout_alignTop="@id/evening"
         android:layout_alignLeft="@id/monday"
         android:layout_alignRight="@id/monday"
-        android:layout_alignBottom="@id/evening"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:background="@drawable/time_checked"/>
+        android:layout_alignBottom="@id/evening"/>
     <CheckBox
         android:id="@+id/tuesday_evening"
         android:layout_width="wrap_content"
@@ -252,10 +207,7 @@
         android:layout_alignTop="@id/evening"
         android:layout_alignLeft="@id/tuesday"
         android:layout_alignRight="@id/tuesday"
-        android:layout_alignBottom="@id/evening"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:background="@drawable/time_checked"/>
+        android:layout_alignBottom="@id/evening"/>
     <CheckBox
         android:id="@+id/wednesday_evening"
         android:layout_width="wrap_content"
@@ -263,10 +215,7 @@
         android:layout_alignTop="@id/evening"
         android:layout_alignLeft="@id/wednesday"
         android:layout_alignRight="@id/wednesday"
-        android:layout_alignBottom="@id/evening"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:background="@drawable/time_checked"/>
+        android:layout_alignBottom="@id/evening"/>
     <CheckBox
         android:id="@+id/thursday_evening"
         android:layout_width="wrap_content"
@@ -274,10 +223,7 @@
         android:layout_alignTop="@id/evening"
         android:layout_alignLeft="@id/thursday"
         android:layout_alignRight="@id/thursday"
-        android:layout_alignBottom="@id/evening"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:background="@drawable/time_checked"/>
+        android:layout_alignBottom="@id/evening"/>
     <CheckBox
         android:id="@+id/friday_evening"
         android:layout_width="wrap_content"
@@ -285,10 +231,7 @@
         android:layout_alignTop="@id/evening"
         android:layout_alignLeft="@id/friday"
         android:layout_alignRight="@id/friday"
-        android:layout_alignBottom="@id/evening"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:background="@drawable/time_checked"/>
+        android:layout_alignBottom="@id/evening"/>
     <CheckBox
         android:id="@+id/saturday_evening"
         android:layout_width="wrap_content"
@@ -296,10 +239,7 @@
         android:layout_alignTop="@id/evening"
         android:layout_alignLeft="@id/saturday"
         android:layout_alignRight="@id/saturday"
-        android:layout_alignBottom="@id/evening"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:background="@drawable/time_checked"/>
+        android:layout_alignBottom="@id/evening"/>
     <CheckBox
         android:id="@+id/sunday_evening"
         android:layout_width="wrap_content"
@@ -307,8 +247,5 @@
         android:layout_alignTop="@id/evening"
         android:layout_alignLeft="@id/sunday"
         android:layout_alignRight="@id/sunday"
-        android:layout_alignBottom="@id/evening"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:background="@drawable/time_checked"/>
+        android:layout_alignBottom="@id/evening"/>
     </RelativeLayout>
